--- a/menuslider/style.css
+++ b/menuslider/style.css
@@ -15,6 +15,12 @@
 body {
     font-family: 'Lato', sans-serif;
     margin: 0;
+    transition: transform 0.3 ease;
+}
+
+/* this needs to match the width of the nav. our nav is 200 px hence we translate 200px */
+body.show-nav {
+    transform: translateX(200px);
 }
 
 nav {
@@ -180,6 +186,7 @@ nav ul {
     margin-bottom: 5px;
   }
   
+  /* making the sign up text boxes 100% so they occupy the full width of the div */
   .modal-form .form-input {
     padding: 8px;
     width: 100%;
@@ -192,6 +199,8 @@ nav ul {
     top: 0;
     right: 0;
   }
+
+  /* we create a keyframe to animate the modal */
   
   @keyframes modalopen {
     from {
